--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
     "keywords": [
     "python3",
     "telegram",
-    "Fallen",
+    "SEMO",
     "MusicBot",
     "telegram-bot",
     "pyrogram"
